# card-arena

./: .gitignore  Makefile  README.md  pyproject.toml
configs/: baseline.yaml
docs/: architecture.md  competition_strategy.md  risk_register.md  rules_integration.md
scripts/: check_public_hygiene.py
src/ptcg_ai_agent/: __init__.py  actions.py  agent.py  match_runner.py  state.py
src/ptcg_ai_agent/adapters/: __init__.py  official_adapter.py
src/ptcg_ai_agent/evaluation/: __init__.py  league.py
src/ptcg_ai_agent/training/: __init__.py  self_play.py
tests/: test_baselines.py  test_official_adapter.py
