[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "card-arena"
version = "0.1.0"
description = "public scaffold for a ptcg ai battle agent"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "repo contributors"}]
dependencies = [
  "numpy>=1.24",
  "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
  "mypy>=1.8",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
